--- a/templates/file1.html
+++ b/templates/file1.html
@@ -92,8 +92,17 @@
         Thanks to: <a href="https://www.kaggle.com/uciml/pima-indians-diabetes-database/data">
             Pima Indians Diabetes Database
         </a>
-        <br/>
-        <br/>
+    </p>
+    <br/>
+
+    <h2 style="color:red; text-align: center">
+        <b>DISCLAIMER:</b> This demo is only for<br/>
+        demostrative and entertaining purposes,<br/>
+        it is not an actual diabetes diagnostic tool.
+    </h2>
+
+    <br/>
+    <p style="text-align: center">
         Please, fill the next form in order to obtain a diabetes prediction:
     </p>
 
