--- a/templates/file2.html
+++ b/templates/file2.html
@@ -50,6 +50,14 @@
     <br/>
     <h2>Accuracy: {{"{:.2f}".format(accuracy)}}</h2>
     <br/>
+
+    <h2 style="color:red; text-align: center">
+        <b>DISCLAIMER:</b> This demo is only for<br/>
+        demostrative and entertaining purposes,<br/>
+        it is not an actual diabetes diagnostic tool.
+    </h2>
+    <br/>
+
     <a class="back_button" href="{{url_for('welcome_page')}}">Back</a>
 
     <script>
